-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Query Optimization
-
Fully Compatible
-
ALL
-
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Multiple tests have been failing with this error in the linked BFs. – for example jstests/aggregation/sources/lookup/lookup_non_correlated.js
- is related to
-
SERVER-113172 Support compound join predicate in join optimizer represented as $expr in sub-pipeline
-
- Closed
-
-
SERVER-115666 Join Optimization: Bail out if a join has no join predicates
-
- Closed
-
- related to
-
SERVER-116033 Support absorbed single-table filters when constructing join graph for empty subpipelines
-
- Closed
-