SERVER-115982: Fall back from join optimization on $lookups with absorbed filters (#45682)

GitOrigin-RevId: 776aef1b704a8bafc8f0f58ad8559498064a68ae